[package]
name = "luacode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.9.0"


#lazy_static = "1.4.0"
#ckb-types = "0.101.0"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#kabletop-ckb-sdk = { git = "https://github.com/ashuralyk/kabletop-ckb-sdk" }
#molecule = "0.7.0"
[build-dependencies]
cc = "1.0.69"